--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <img src="images/logo.png" alt="logo" class="logo"/>
             </div>
             <ul class="navbar-menu">
-                <li><a href="http://127.0.0.1:5500/index.html">Home-2</a></li>
+                <li><a href="http://127.0.0.1:5500/index.html">Home</a></li>
                 <li><a href="http://127.0.0.1:5500/Explore.html">Explore</a></li>
                 <li><a href="http://127.0.0.1:5500/Creator.html">Creator</a></li>
                 <li><a href="http://127.0.0.1:5500/Pages.html">Pages <svg class="pages-icon-svg" width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
