--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         </svg>
                         
                 </div>  
-                <img src="images/OBJECTS (1).png" alt="Overlay Image" style="width: 239px; height: 249px; border-radius: 10px;">
+                <img src="images/OBJECTS-6.png" alt="Overlay Image" style="width: 239px; height: 249px; border-radius: 10px;">
                 <spam class="timer">00 : 00 : 00 : 00</spam>
             </div>
             <div class="inner-card">
@@ -234,7 +234,7 @@
                         </defs>
                         </svg>
                 </div>  
-                <img src="images/OBJECTS.png" alt="Overlay Image" style="width: 239px; height: 249px; border-radius: 10px;">
+                <img src="images/OBJECTS-4.png" alt="Overlay Image" style="width: 239px; height: 249px; border-radius: 10px;">
                 <spam class="timer">00 : 00 : 00 : 00</spam>
             </div>
             <div class="inner-card">
