--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
     <div class="live-bids">
         <h6 class="live-bids-heading">Live Bids</h6>
     <div class="card-2">
+        <div class="explore-card">
         <div class="outer-card outer-card-1">
             <div class="main-image">
                 <div class="like-icon">
@@ -251,6 +252,7 @@
                 </svg>Activity</span>
             <button>Place Bid</button>
         </div>
+    </div>
     </div>
 </div>
     
