--- a/error.html
+++ b/error.html
@@ -20,14 +20,31 @@
                 <img src="images/logo.png" alt="logo" class="logo"/>
             </div>
             <ul class="navbar-menu">
-                <li><a href="http://127.0.0.1:5500/index.html">Home</a></li>
-                <li><a href="http://127.0.0.1:5500/Explore.html">Explore</a></li>
-                <li><a href="http://127.0.0.1:5500/Creator.html">Creator</a></li>
-                <li><a href="http://127.0.0.1:5500/Pages.html">Pages</a></li>
-                <li><a href="http://127.0.0.1:5500/Blog.html">Blog</a></li>
-                <li><a href="http://127.0.0.1:5500/Contact.html">Contact</a></li>
-            </ul>
-        </nav>
+              <li><a href="http://127.0.0.1:5500/index.html">Home</a></li>
+              <li><a href="http://127.0.0.1:5500/Explore.html">Explore</a></li>
+              <li><a href="http://127.0.0.1:5500/Creator.html">Creator</a></li>
+              <li>
+                  <a href="http://127.0.0.1:5500/Pages.html">Pages</a>
+                  <ul class="dropdown">
+                      <li><a href="http://127.0.0.1:5500/About.html">Creator</a></li>
+                      <li>
+                        <a href="#">Art</a>
+                        <ul class="dropdown">
+                            <li><a href="http://127.0.0.1:5500/Testimonials.html">Arts</a></li>
+                            <li><a href="http://127.0.0.1:5500/Careers.html">upload</a></li>
+                        </ul>
+                    </li>
+                      <li><a href="http://127.0.0.1:5500/Services.html">FAQS</a></li>
+                      <li><a href="http://127.0.0.1:5500/Portfolio.html">Register</a></li>
+                      <li><a href="http://127.0.0.1:5500/About.html">Login</a></li>
+                      <li><a href="http://127.0.0.1:5500/Services.html">Terms</a></li>
+                      <li><a href="http://127.0.0.1:5500/Portfolio.html">Error</a></li>
+                     
+                  </ul>
+              </li>
+              <li><a href="http://127.0.0.1:5500/Blog.html">Blog</a></li>
+              <li><a href="http://127.0.0.1:5500/Contact.html">Contact</a></li>
+          </ul>
       </section>
     <div class="art-bg-text">
       <h1>404 Error</h1>
