--- a/demo.html
+++ b/demo.html
@@ -18,6 +18,7 @@
             padding: 10px 20px;
             background-color: #FFFFFF14;
             height: 100px;
+            border-bottom: 2px solid #21E7B7; /* Line below the navbar */
         }
 
         .navbar .logo {
@@ -61,6 +62,7 @@
             padding: 0px;
             z-index: 10;
             width: 200px;
+            border: 1px solid #ddd; /* Line around the dropdown */
         }
 
         .navbar-menu li:hover > .dropdown {
@@ -70,6 +72,11 @@
         .navbar-menu .dropdown li {
             display: block;
             padding: 5px 20px;
+            border-bottom: 1px solid #ddd; /* Line between dropdown items */
+        }
+
+        .navbar-menu .dropdown li:last-child {
+            border-bottom: none; /* Remove line for the last item */
         }
 
         .navbar-menu .dropdown li a {
@@ -91,7 +98,7 @@
             top: 0;
             left: 100%;
             margin-left: 10px;
-            border-radius: 5px;
+            border: 1px solid #ddd; /* Line around nested dropdown */
         }
 
         .explore-bg-text {
@@ -99,6 +106,7 @@
             padding: 50px;
             background: #333;
             color: #fff;
+            border-top: 2px solid #21E7B7; /* Line above this section */
         }
     </style>
 </head>
