--- a/art.html
+++ b/art.html
@@ -47,6 +47,10 @@
                         <li><a href="http://127.0.0.1:5500/error.html">Error</a></li>
                        
                     </ul>
+                </li>
+                <li><a href="http://127.0.0.1:5500/Blog.html">Blog</a></li>
+                <li><a href="http://127.0.0.1:5500/Contact.html">Contact</a></li>
+            </ul>
         </nav>
       </section>
     <div class="art-bg-text">
