--- a/error.html
+++ b/error.html
@@ -64,7 +64,9 @@
     <h1 class="error-text-1">Ooops! Page not Found</h1>
     <h2 class="error-text-2">Maybe this page has broken or not created. Come back to the Homepage</h2>
     <div class="container">
+      <a href="http://127.0.0.1:5500/index.html">
         <button class="centered-button"><h3 class="error-text-3">back to home page</h3></button>
+      </a>
       </div>
       
     <h3 class="error-text-3"></h3>
