--- a/art.html
+++ b/art.html
@@ -20,36 +20,36 @@
                 <img src="images/logo.png" alt="logo" class="logo"/>
             </div>
             <ul class="navbar-menu">
-                <li><a href="http://127.0.0.1:5500/index.html">Home</a></li>
-                <li><a href="http://127.0.0.1:5500/Explore.html">Explore</a></li>
-                <li><a href="http://127.0.0.1:5500/Creator.html">Creator</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/Explore.html">Explore</a></li>
+                <li><a href="/Creator.html">Creator</a></li>
                 <li>
-                    <a href="http://127.0.0.1:5500/Pages.html">Pages <svg width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <a href="/Pages.html">Pages <svg width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M11 1L6 6L1 1" stroke="white" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                       </svg>
                       </a>
                     <ul class="dropdown">
-                        <li><a href="http://127.0.0.1:5500/Creator.html">Creator</a></li>
+                        <li><a href="/Creator.html">Creator</a></li>
                         <li>
                           <a href="http://127.0.0.1:5500/art.html">Art <svg width="11" height="7" viewBox="0 0 11 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M10 1L5.5 6L1 1" stroke="black" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                             </a>
                           <ul class="dropdown">
-                              <li><a href="http://127.0.0.1:5500/art.html">Arts</a></li>
-                              <li><a href="http://127.0.0.1:5500/artupload%20.html">upload</a></li>
+                              <li><a href="/art.html">Arts</a></li>
+                              <li><a href="/artupload%20.html">upload</a></li>
                           </ul>
                       </li>
-                        <li><a href="http://127.0.0.1:5500/faqs.html">FAQS</a></li>
-                        <li><a href="http://127.0.0.1:5500/singin.html">Register</a></li>
-                        <li><a href="http://127.0.0.1:5500/login.html">Login</a></li>
-                        <li><a href="http://127.0.0.1:5500/terms.html">Terms</a></li>
-                        <li><a href="http://127.0.0.1:5500/error.html">Error</a></li>
+                        <li><a href="/faqs.html">FAQS</a></li>
+                        <li><a href="/singin.html">Register</a></li>
+                        <li><a href="/login.html">Login</a></li>
+                        <li><a href="/terms.html">Terms</a></li>
+                        <li><a href="/error.html">Error</a></li>
                        
                     </ul>
                 </li>
-                <li><a href="http://127.0.0.1:5500/Blog.html">Blog</a></li>
-                <li><a href="http://127.0.0.1:5500/Contact.html">Contact</a></li>
+                <li><a href="/Blog.html">Blog</a></li>
+                <li><a href="/Contact.html">Contact</a></li>
             </ul>
         </nav>
       </section>
