--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                        
                     </ul>
                 </li>
-                <li><a href="http://127.0.0.1:5500/Blog.html">Blog</a></li>
-                <li><a href="http://127.0.0.1:5500/Contact.html">Contact</a></li>
+                <li><a href="/Blog.html">Blog</a></li>
+                <li><a href="/Contact.html">Contact</a></li>
             </ul>
         </nav>
      
